# OpenCv

./: CMakeLists.txt  Colors.cpp  Colors.hpp  My_Exeption.cpp  My_Exeption.hpp  Picture.cpp  Picture.hpp  Video.cpp  Video.hpp  main.cpp
